[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Options/SliderOption.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Averia Libre/AveriaLibre-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="SliderOption" type="Control"]
margin_right = 434.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
optionName = "test_option"
displayName = "Test Option"
minimum = 2
maximum = 8
ticks = 4
currentValue = 5

[node name="Show" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -10.0
margin_right = 49.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 1 )
text = "Option"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider" type="HSlider" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -142.0
margin_top = -8.0
margin_bottom = 8.0
scrollable = false
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberEdit" type="LineEdit" parent="Slider"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -34.0
margin_top = -12.0
margin_bottom = 12.0
custom_constants/minimum_spaces = 6
text = "0"
align = 2
context_menu_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="Slider" to="." method="SliderChange"]
[connection signal="focus_exited" from="Slider/NumberEdit" to="." method="DisplayChange" binds= [ "." ]]
[connection signal="text_entered" from="Slider/NumberEdit" to="." method="DisplayChange"]
